Update Dockerfile to use Java 25, drop arm32 support